# NLtoUMLPipeline

./: .gitignore  LAYER3_ROUNDTRIP.md  README.md  RUN_WORKFLOWS.md  backend_deep_dive.md  package-lock.json  pyproject.toml  scenarios.csv
docs/: aegismod_studio_walkthrough.md
hitl_metrics_1/: hitl_results.csv  hitl_summary.csv  hitl_summary.json  report.md
hitl_metrics_2/: hitl_results.csv  report.md
hitl_metrics_3/: hitl_results.csv  hitl_summary.csv  hitl_summary.json  report.md
hitl_metrics_out/: hitl_results.csv  hitl_summary.csv  hitl_summary.json  report.md
metrics_full_out/: adversarial_results.csv  paraphrase_results.csv  report.md  scenario_results.csv  summary.csv  summary.json
metrics_full_out_1/: adversarial_results.csv  paraphrase_results.csv  report.md  scenario_results.csv  summary.csv  summary.json
metrics_full_out_2/: adversarial_results.csv  paraphrase_results.csv  report.md  scenario_results.csv  summary.csv  summary.json
metrics_full_out_3/: adversarial_results.csv  paraphrase_results.csv  report.md  scenario_results.csv  summary.csv  summary.json
metrics_full_out_4/: adversarial_results.csv  paraphrase_results.csv  report.md  scenario_results.csv  summary.csv  summary.json
metrics_out/: metrics_summary.csv  metrics_summary.json  per_scenario_results.csv
src/nltouml/: agent_edit.py  agent_validate.py  cli.py  config.py  diagram_render.py  hitl_metrics.py  io_utils.py  layout.py  llm.py  metrics.py  metrics_full.py  (+10 more)
studio/: index.html  package-lock.json  package.json  tailwind.config.js
templates/: capability_catalog.json
(+20 files in other folders)
